--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJS05C49BL"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-XJS05C49BL');
-    </script>
-    <title>Toon Rescue - Complete SOS Toontown Card Collection</title>
-    <meta name="description" content="Find and filter all SOS Toons in Toontown Rewritten. Comprehensive guide with detailed information about healing, luring, trapping, and other SOS card abilities." />
-    <meta name="keywords" content="Toontown Rewritten, SOS Cards, SOS Toons, TTR, Flippy, Toon-Up, Trap, Lure, Sound, Drop, Restock, Accuracy, Toon Rescue, Toontown Guide" />
-    <!-- Open Graph / Social Media -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Toon Rescue - Complete SOS Toontown Card Collection" />
-    <meta property="og:description" content="Find and filter all SOS Toons in Toontown Rewritten. Comprehensive guide with detailed information about healing, luring, trapping, and other SOS card abilities." />
-    <meta property="og:url" content="https://toonrescue.com" />
+    <title>Toontown Rewritten SOS Cards</title>
   </head>
   <body>
     <div id="root"></div>
