--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="description" content="Browse and search Toontown Rewritten SOS Cards. Find detailed information about each SOS card including stats, effects, and ratings." />
     <meta name="theme-color" content="#4526CE" />
     <title>Toontown Rewritten SOS Cards</title>
+    
+    <!-- PWA Icons -->
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="https://github.com/cvalfano/toonrescue/blob/main/images/app%20logo.png?raw=true" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Toon Rescue" />
+    
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJS05C49BL"></script>
     <script>
